--- a/calculator/static/css/style.css
+++ b/calculator/static/css/style.css
@@ -17,8 +17,10 @@ html body {
 body {
     position: relative;
     padding: 0;
-    margin: 0;
+    margin: 60px;
     background: #f4f4f6;
+    font-family: Arial, sans-serif;
+    font-size: 12px;
 }
 
 div {
@@ -63,4 +65,6 @@ div {
 .range-slider {
     height: 50px;
     width: 180px;
+    position: relative;
 }
+
