Add folders for AWS deploy

--- a/calculator/templates/index.html
+++ b/calculator/templates/index.html
@@ -5,6 +5,95 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"/>
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
 		<link rel="stylesheet" href="/static/css/style.css"/>
+		<style>
+			html {
+				color: #333;
+				font-family: "proxima-nova",sans-serif;
+				font-size: 16px;
+				font-weight: 400;
+				-webkit-font-smoothing: antialiased;
+			}
+
+			html body {
+				margin-bottom: 70px !important;
+			}
+
+			html body {
+				transition: margin 300ms ease-in-out;
+			}
+
+			body {
+				position: relative;
+				padding: 0;
+				margin: 40px;
+				background: #f4f4f6;
+			}
+
+			div {
+				display: block;
+			}
+
+			.container {
+				position: relative;
+				width: 950px;
+				margin-left: auto;
+				margin-right: auto;
+				margin-top: 20px;
+				box-sizing: border-box;
+				display: flex;
+				
+			}
+
+			.header {
+				position: relative;
+				width: 850px;
+				margin-left: auto;
+				margin-right: auto;
+				margin-top: 30px;
+			}
+
+			#left-container {
+				position: relative;
+				width: 240px;
+				height: auto;
+				box-sizing: border-box;
+			}
+
+			#right-container {
+				position: relative;
+				width: 700px;
+				height: auto;
+				min-height: 350px;
+				box-sizing: border-box;
+				background-color: white;
+			}
+
+			.range-slider {
+				height: 60px;
+				width: 180px;
+				position: relative;
+			}
+
+			.btn-pos {
+				width: 180px;
+				margin-top: 30px;
+			}
+
+			.bottom-border {
+				width: auto;
+				margin-right: 20px;
+				height: 10px;
+				border-top: 1px solid #ccc;
+			}
+
+			#sp_df {
+				color: blue;
+			}
+
+
+
+
+		</style>
 		
         
         <!--jQuery-->
